[gd_scene load_steps=9 format=3 uid="uid://mklg1q758tn3"]

[ext_resource type="Script" path="res://GridBase/Player.gd" id="1_c4056"]
[ext_resource type="Texture2D" uid="uid://dwtg3gvrxvfss" path="res://icon.svg" id="2_vrtq6"]
[ext_resource type="Script" path="res://GridBase/AIController2D.gd" id="3_edvva"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kigsj"]
size = Vector2(126, 123)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7ob4"]
size = Vector2(20, 654)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpg84"]
size = Vector2(19, 1144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ap4k7"]
size = Vector2(27, 1138)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyxyh"]
size = Vector2(49, 49)

[node name="Base" type="Node2D"]

[node name="Player" type="Area2D" parent="."]
position = Vector2(381, 364)
script = ExtResource("1_c4056")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("2_vrtq6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_kigsj")

[node name="RayCast2D" type="RayCast2D" parent="Player"]
collision_mask = 0

[node name="AIController2D" type="Node2D" parent="Player" node_paths=PackedStringArray("cube")]
script = ExtResource("3_edvva")
cube = NodePath("..")

[node name="Timer" type="Timer" parent="Player"]
wait_time = 0.1
autostart = true

[node name="wall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall"]
position = Vector2(0, 317)
shape = SubResource("RectangleShape2D_n7ob4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wall"]
position = Vector2(1150, 317)
shape = SubResource("RectangleShape2D_n7ob4")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="wall"]
position = Vector2(589, 641.5)
rotation = -1.5708
shape = SubResource("RectangleShape2D_dpg84")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="wall"]
position = Vector2(574, 12.5)
rotation = -1.5708
shape = SubResource("RectangleShape2D_ap4k7")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(622, 363)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_jyxyh")

[connection signal="timeout" from="Player/Timer" to="Player" method="_on_timer_timeout"]
[connection signal="area_entered" from="wall" to="Player" method="_on_wall_area_entered"]
[connection signal="area_entered" from="Area2D" to="Player" method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="Player" method="_on_area_2d_body_entered"]
